# Copyright (c) 2019 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
[package]
name = "rusty-engine"
version = "0.0.1"
authors = ["Martin Huschenbett <martin.huschenbett@digitalasset.com>"]
edition = "2018"
build = "build.rs"
publish = false
description = "Prototype of a DAML Engine written in Rust"
homepage = "https://github.com/hurryabit/rusty-engine#readme"
repository = "https://github.com/hurryabit/rusty-engine"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
fnv = "1.0.6"
hex = "0.3.2"
sha2 = "0.8.0"
zip = "0.5.2"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf"
rev = "76c8892a410fa7a3d74041332c20fb2b1a74f71f"

[build-dependencies.protobuf-codegen-pure]
git = "https://github.com/stepancheg/rust-protobuf"
rev = "76c8892a410fa7a3d74041332c20fb2b1a74f71f"
