# Copyright (c) 2019 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
[package]
name = "rusty-engine"
version = "0.0.1"
authors = ["Martin Huschenbett <martin.huschenbett@digitalasset.com>"]
edition = "2018"
build = "build.rs"
publish = false
description = "Prototype of a DAML Engine written in Rust"
homepage = "https://github.com/digital-asset/rusty-engine#readme"
repository = "https://github.com/digital-asset/rusty-engine"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
fnv = "1.0.6"
hex = "0.4.2"
libflate = ">= 0.1.25"
protobuf = "2.14.0"
sha2 = "0.8.1"
zip = "0.5.5"

[build-dependencies]
protobuf-codegen-pure = "2.14.0"
